commit on "main"

--- a/firstWindow.html
+++ b/firstWindow.html
@@ -9,6 +9,8 @@
     <script src='firstWindow.js'></script>
 </head>
 <body>
-    
+    <div class="getNumOFStations">
+        <p>Въведи брой на станции(включително начален и финален):</p>
+    </div>
 </body>
 </html>
